# neural-runtime-cpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yaml
benchmarks/: bench_cnn.cpp  benchmark.sh
examples/: mnist_conv.cpp  mnist_loader.cpp  mnist_loader.hpp  mnist_mlp.cpp  three_class.cpp  xor_forward.cpp  xor_training.cpp
helpers/: download_mnist.py
include/nrt/: activations.hpp  computation_node.hpp  conv2d.hpp  flatten.hpp  linear.hpp  loss.hpp  maxpool2d.hpp  module.hpp  operations.hpp  optimizer.hpp  parameter.hpp  sequential.hpp  tensor.hpp
notes/: mnist_mlp.md  xor_training.md
notes/benchmarks/: bm-v1.0.0.md  bm-v1.1.0.md
references/: xor_training_pytorch.py
scripts/: coverage.sh
src/: activations.cpp  conv2d.cpp  flatten.cpp  linear.cpp  loss.cpp  maxpool2d.cpp  operations.cpp  optimizer.cpp  sequential.cpp  tensor.cpp
tests/: test_activations.cpp  test_conv2d.cpp  test_flatten.cpp  test_integration.cpp  test_linear.cpp  test_loss.cpp  test_maxpool2d.cpp  test_operations.cpp  test_optimizer.cpp  test_tensor.cpp
